Bug fixing Left to do: - Layout